--- a/UMWebsite/Web.config
+++ b/UMWebsite/Web.config
@@ -8,4 +8,8 @@
     <compilation debug="true" targetFramework="4.5"/>
     <httpRuntime targetFramework="4.5"/>
   </system.web>
+
+  <appSettings>
+    <add key="IMatlabSvc" value="UMProjectWebsite.Service.Plugin.MatlabSvcImpl"/>
+  </appSettings>
 </configuration>
