--- a/UMWebsite/Web.config
+++ b/UMWebsite/Web.config
@@ -10,6 +10,6 @@
   </system.web>
 
   <appSettings>
-    <add key="IMatlabSvc" value="UMProjectWebsite.Service.Plugin.MatlabSvcImpl"/>
+    <add key="IMatlabSvc" value="UMWebsite.Service.Plugin.MatlabSvcImpl"/>
   </appSettings>
 </configuration>
