Job Bank update

--- a/UMJobWebsite/Web.config
+++ b/UMJobWebsite/Web.config
@@ -13,7 +13,7 @@
     <httpRuntime targetFramework="4.5"/>
   </system.web>
   <appSettings>
-    <add key="IMatlabSvc" value="UMWebsite.Service.Plugin.MatlabSvcImpl"/>
-    <add key="IFileSystemSvc" value="UMWebsite.Service.Plugin.FileSystemSvcImpl"/>
+    <add key="IMatlabSvc" value="UMJobWebsite.Service.Plugin.MatlabSvcImpl"/>
+    <add key="IFileSystemSvc" value="UMJobWebsite.Service.Plugin.FileSystemSvcImpl"/>
   </appSettings>
 </configuration>
