--- a/UMRecruiteeWebsite/Web.config
+++ b/UMRecruiteeWebsite/Web.config
@@ -15,5 +15,22 @@
   <appSettings>
     <add key="IMatlabSvc" value="UMRecruiteeWebsite.Service.Plugin.MatlabSvcImpl"/>
     <add key="IFileSystemSvc" value="UMRecruiteeWebsite.Service.Plugin.FileSystemSvcImpl"/>
+    <add key="ICategorySvc" value="UMRecruiteeWebsite.Service.Plugin.CategorySvcEFImpl"/>
+    <add key="IRankingSvc" value="UMRecruiteeWebsite.Service.Plugin.RankingSvcEFImpl"/>
+    <add key="IRecruiteeSvc" value="UMRecruiteeWebsite.Service.Plugin.RecruiteeSvcEFImpl"/>
+    <add key="ISkillSvc" value="UMRecruiteeWebsite.Service.Plugin.SkillSvcEFImpl"/>
+
   </appSettings>
+  <system.serviceModel>
+    <behaviors>
+      <serviceBehaviors>
+        <behavior name="">
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="false" />
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true"
+      multipleSiteBindingsEnabled="true" />
+  </system.serviceModel>
 </configuration>
