--- a/UMRecruiteeWebsite/Web.config
+++ b/UMRecruiteeWebsite/Web.config
@@ -4,6 +4,10 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <connectionStrings>
+    <add name="RecruiteeBankContext" connectionString="Data Source=sadallo-pc;Initial Catalog=RecruiteeBank;Integrated Security=True;MultipleActiveResultSets=True"
+        providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5">
       <assemblies>
