--- a/UMJobWebsite/Web.config
+++ b/UMJobWebsite/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -15,5 +15,22 @@
   <appSettings>
     <add key="IMatlabSvc" value="UMJobWebsite.Service.Plugin.MatlabSvcImpl"/>
     <add key="IFileSystemSvc" value="UMJobWebsite.Service.Plugin.FileSystemSvcImpl"/>
+    <add key="ICategorySvc" value="UMJobWebsite.Service.Plugin.CategorySvcEFImpl"/>
+    <add key="ICompensationSvc" value="UMJobWebsite.Service.Plugin.CompensationSvcEFImpl"/>
+    <add key="IEmployerSvc" value="UMJobWebsite.Service.Plugin.EmployerSvcEFImpl"/>
+    <add key="IJobSvc" value="UMJobWebsite.Service.Plugin.JobSvcEFImpl"/>
+    <add key="ISkillSvc" value="UMJobWebsite.Service.Plugin.SkillSvcEFImpl"/>
   </appSettings>
+  <system.serviceModel>
+    <behaviors>
+      <serviceBehaviors>
+        <behavior name="">
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="false" />
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true"
+      multipleSiteBindingsEnabled="true" />
+  </system.serviceModel>
 </configuration>
