--- a/UMElasticWebsite/Web.config
+++ b/UMElasticWebsite/Web.config
@@ -20,6 +20,9 @@
     <add key="ITaskSvc" value="UMElasticWebsite.Service.Plugin.TaskSvcEFImpl"/>
     <add key="IRecruiteeSvc" value="UMElasticWebsite.Service.Plugin.RecruiteeSvcWSImpl"/>
     <add key="IJobSvc" value="UMElasticWebsite.Service.Plugin.JobSvcWSImpl"/>
+    <add key="ISkillJobJobSvc" value="UMElasticWebsite.Service.Plugin.SkillJobSvcWSImpl"/>
+    <add key="IRankingSvc" value="UMElasticWebsite.Service.Plugin.RankingSvcWSImpl"/>
+    <add key="ISkillRecruiteeSvc" value="UMElasticWebsite.Service.Plugin.SkillRecruiteeSvcWSImpl"/>
   </appSettings>
   <system.serviceModel>
     <bindings>
