--- a/UMJobWebsite/Web.config
+++ b/UMJobWebsite/Web.config
@@ -4,8 +4,14 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <!--
   <connectionStrings>
     <add name="JobBankContext" connectionString="Data Source=GCRUZPC\SQLEXPRESS;Initial Catalog=JobBank;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
+  -->
+  
+  <connectionStrings>
+    <add name="JobBankContext" connectionString="Data Source=sadallo-pc;Initial Catalog=JobBank;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5">
