--- a/UMElasticWebsite/Web.config
+++ b/UMElasticWebsite/Web.config
@@ -23,6 +23,7 @@
     <add key="ISkillJobSvc" value="UMElasticWebsite.Service.Plugin.SkillJobSvcWSImpl"/>
     <add key="IRankingSvc" value="UMElasticWebsite.Service.Plugin.RankingSvcWSImpl"/>
     <add key="ISkillRecruiteeSvc" value="UMElasticWebsite.Service.Plugin.SkillRecruiteeSvcWSImpl"/>
+    <add key="IFileSystemSvc" value="UMElasticWebsite.Service.Plugin.FileSystemSvcImpl"/>
   </appSettings>
   <system.serviceModel>
     <bindings>
